# COVID-19-NZ-Project

./: README.md
CS106_A2_Project/: CMakeLists.txt  Readme.txt  admincovidtestreport.cpp  admincovidtestreport.h  admincovidtestreport.ui  admindashboard.cpp  admindashboard.h  admindashboard.ui  adminlogin.cpp  adminlogin.h  adminlogin.ui  adminmodifyuserinformation.cpp  adminmodifyuserinformation.h  adminmodifyuserinformation.ui  adminuserinformation.cpp  adminuserinformation.h  adminuserinformation.ui  adminviewuserinformation.cpp  adminviewuserinformation.h  adminviewuserinformation.ui  covidnegativeresult.cpp  covidnegativeresult.h  covidnegativeresult.ui  covidpositiveresult.cpp  covidpositiveresult.h  covidpositiveresult.ui  databaseheader.h  img.qrc  main.cpp  mainwindow.ui  mycovidnz.sqlite  resource.qrc  usercovidlist.cpp  usercovidlist.h  usercovidlist.ui  userdashboard.cpp  userdashboard.h  userdashboard.ui  userlogin.cpp  userlogin.h  (+13 more)
